# adventofcode2022_day06

./: Cargo.toml  README.md
benches/: bench_day06.rs
src/: lib.rs  main.rs
