[package]
name = "day06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_day06"
harness = false

# to run benchmark in debug and see the speed difference
# [profile.bench]
# opt-level = 0
